# tokenizer

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO  bonusRoadmap  dependencies.sh  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  setup.sh  usefullcmd.sh
code/client/: Cargo.toml  client.ts
code/client/wallet/: pubkey
code/my-token/: Anchor.toml  Cargo.toml  adressTk  generate_idl.py  jest.config.js  launch.sh  package-lock.json  package.json  tsconfig.json
code/my-token/programs/my-token/: Cargo.toml
code/my-token/programs/my-token/src/: lib.rs  multisig.rs
code/my-token/tests/: my-token.ts  simple-front.html  simple-server.js  with-frontend.ts
code/nft_data/: 1.json  2.json  3.json  4.json  5.json
code/wallet/: keypair1.json  keypair2.json  program-keypair.json
deploy/: deploy.sh  instruction.md  my-token.ts  package.json
documentation/: Dockerfile  README.md  doc.md  usefullcmd.sh
documentation/code/my-token/: package.json
documentation/code/my-token/programs/my-token/src/: lib.rs
documentation/code/nft_data/: 1.json  2.json  3.json  5.json
documentation/deploy/: deploy.sh
documentation/documentation/: usefullcmd.sh
