[workspace]
members = [
	"programs/*"
]
resolver = "2"

# [patch.crates-io]
# solana-program = { version = "1.18.17" }
# solana-sdk = { version = "1.18.17" }
# solana-zk-token-sdk = { git = "https://github.com/solana-labs/solana-zk-token-sdk.git", rev = "a_specific_commit_hash" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1