[package]
name = "my-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-spl = {version = "0.30.0", features = ["metadata"]}
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
mpl-token-metadata = "4.1.2"
solana-program = "1.18.16"
# solana-program = { workspace = true }

